# mmix

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
ci/: 10-trailing_whitespaces.sh  20-trailing_newline.sh  30-line_endings.sh  40-indentation.sh  50-line_length.sh  60-build.sh  70-test.sh  80-doc.sh  run.sh
res/: prime113.mmo  prime119.mmo
src/: cli.rs  lib.rs  main.rs  prelude.rs
src/machine/: mod.rs
src/machine/behavior/: cu.rs  mod.rs
src/machine/behavior/is/: mod.rs
src/machine/behavior/is/arithmetic/: add.rs  addi.rs  addu.rs  addu16.rs  addu16i.rs  addu2.rs  addu2i.rs  addu4.rs  addu4i.rs  addu8.rs  addu8i.rs  addui.rs  cmp.rs  cmpi.rs  cmpu.rs  cmpui.rs  div.rs  divi.rs  divu.rs  divui.rs  mod.rs  mul.rs  muli.rs  mulu.rs  mului.rs  neg.rs  negi.rs  negu.rs  negui.rs  sl.rs  sli.rs  slu.rs  slui.rs  sr.rs  sri.rs  sru.rs  srui.rs  sub.rs  subi.rs  subu.rs  (+1 more)
src/machine/behavior/is/bitwise/: and.rs  andi.rs  andn.rs  andni.rs  mod.rs  mux.rs  muxi.rs  nand.rs  nandi.rs  nor.rs  nori.rs  nxor.rs  nxori.rs  or.rs  ori.rs  orn.rs  orni.rs  sadd.rs  saddi.rs  xor.rs  xori.rs
src/machine/behavior/is/bytewise/: bdif.rs  bdifi.rs  mod.rs  mor.rs  mori.rs  mxor.rs  mxori.rs  odif.rs  odifi.rs  tdif.rs  tdifi.rs  wdif.rs  wdifi.rs
src/machine/behavior/is/conditional/: csev.rs  csevi.rs  csn.rs  csni.rs  csnn.rs  csnni.rs  csnp.rs  csnpi.rs  csnz.rs  csnzi.rs  csod.rs  csodi.rs  csp.rs  cspi.rs  csz.rs  cszi.rs  mod.rs  zsev.rs  zsevi.rs  zsn.rs  (+13 more)
src/machine/state/: gpr.rs  mem.rs  mod.rs  sr.rs  types.rs
src/machine/state/generic/: types.rs
(+161 files in other folders)
